re PR rtl-optimization/88845 (ICE in lra_set_insn_recog_data, at lra.c:1010)

gcc/
	PR rtl-optimization/88845
	* config/rs6000/rs6000.c (rs6000_emit_move_si_sf_subreg): Enable during
	LRA.
	* lra.c (remove_scratches_1): New function.
	(remove_scratches): Use it.
	(lra_emit_move): Likewise.

gcc/testsuite/
	PR rtl-optimization/88845
	* gcc.target/powerpc/pr88845.c: New test.

From-SVN: r269428